--- a/price.html
+++ b/price.html
@@ -259,7 +259,7 @@
            
     <div class="row fs-4 align-items-center">
                                            <div class="col-auto">
-                                             <label class="col-form-label fs-6 ms-1 fw-bold">รายการตรวจสุขภาพทั่วไป</label>
+                                             <label class="col-form-label fs-6 ms-1 fw-bold">รายการตรวจวิเคราะห์สารเคมีทางชีวภาพ(Toxico)</label>
                                            </div>
                                            
                                        </div>
