--- a/price.html
+++ b/price.html
@@ -202,6 +202,12 @@
 
 
         }
+
+            .container-data{
+                width: 100%;
+            }
+
+            
            .container-fluid{
               width: 100%;
          }
