--- a/price.html
+++ b/price.html
@@ -202,6 +202,9 @@
 
 
         }
+            .container-sm {
+                display: block;
+            }
 
             .container-data{
                 width: 100%;
