--- a/price.html
+++ b/price.html
@@ -90,6 +90,9 @@
     </nav>
     <div class="b-example-divider pt-2 ps-3" style="font-family: sarabun; color: darkgreen;">อัตราค่าใช้จ่ายตามรายการตรวจ</div>
     <style>
+        body{
+            background-image: url("https://img2.pic.in.th/pic/-HELTH-REPORT-BOOK.png");
+        }
         #programlist tr {
             height: 10px;
             /* ปรับค่าตามต้องการ */
@@ -153,7 +156,7 @@
         }
         .container-sm{
             display: flex;
-            background-image: url("https://img2.pic.in.th/pic/-HELTH-REPORT-BOOK.png");
+            
         }
 
         .custom-table {
@@ -258,7 +261,7 @@
                     <th scope="col">ราคา</th>
                 </tr>
             </thead>
-            <tbody id="programlist" style="font-size: 0.75rem;">
+            <tbody id="programlist" style="font-size: 0.75rem; background-color: white;">
 
 
             </tbody>
@@ -283,7 +286,7 @@
                     <th scope="col">ราคา</th>
                 </tr>
             </thead>
-            <tbody id="toxicolist" style="font-size: 0.75rem;">
+            <tbody id="toxicolist" style="font-size: 0.75rem; background-color: white;">
 
 
             </tbody>
