--- a/price.html
+++ b/price.html
@@ -91,7 +91,7 @@
     <div class="b-example-divider pt-2 ps-3" style="font-family: sarabun; color: darkgreen;">อัตราค่าใช้จ่ายตามรายการตรวจ</div>
     <style>
         body{
-            background-image: url("https://img2.pic.in.th/pic/-HELTH-REPORT-BOOK.png");
+           background-image: linear-gradient(to bottom, #eefff3, #caffdb, #a1ffc3, #71ffaa, #00ff90);
         }
         #programlist tr {
             height: 10px;
