--- a/price.html
+++ b/price.html
@@ -91,7 +91,7 @@
     <div class="b-example-divider pt-2 ps-3" style="font-family: sarabun; color: darkgreen;">อัตราค่าใช้จ่ายตามรายการตรวจ</div>
     <style>
         body{
-           background-image: linear-gradient(to bottom, #eefff3, #caffdb, #a1ffc3, #71ffaa, #00ff90);
+           background-image: linear-gradient(to top, #156f20, #358532, #4f9b45, #69b158, #82c86b, #93d47e, #a4e091, #b5eca4, #c3efba, #d2f2ce, #e3f4e2, #f4f6f4);
         }
         #programlist tr {
             height: 10px;
