--- a/blog.html
+++ b/blog.html
@@ -95,6 +95,9 @@
         </div>
     </div>
 <style>
+    body{
+        background-image: linear-gradient(to top, #156f20, #358532, #4f9b45, #69b158, #82c86b, #93d47e, #a4e091, #b5eca4, #c3efba, #d2f2ce, #e3f4e2, #f4f6f4);
+    }
   .container-blog{
     width: 80%;
     min-height: 400px;
