--- a/checkup.html
+++ b/checkup.html
@@ -90,6 +90,8 @@
     </nav>
 
     <style>
+        body{
+            background-image: linear-gradient(to top, #156f20, #358532, #4f9b45, #69b158, #82c86b, #93d47e, #a4e091, #b5eca4, #c3efba, #d2f2ce, #e3f4e2, #f4f6f4);}
        
         .content-wrapper {
             border: 3px;
