--- a/method.html
+++ b/method.html
@@ -32,6 +32,9 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <style>
+    body{
+        background-image: linear-gradient(to top, #156f20, #358532, #4f9b45, #69b158, #82c86b, #93d47e, #a4e091, #b5eca4, #c3efba, #d2f2ce, #e3f4e2, #f4f6f4);
+    }
       .nav-logo {
             width: 50px;
 
