--- a/blog.html
+++ b/blog.html
@@ -89,7 +89,7 @@
     <!-- Navbar End -->
      <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-darkgreen mb-3 animated slideInDown">R&B Medical</h1>
+            <h1 class="display-3 text-darkgreen mb-3 animated slideInDown" style="color: darkgreen;">R&B Medical</h1>
             <nav aria-label="breadcrumb animated slideInDown">
               
         </div>
