--- a/blog.html
+++ b/blog.html
@@ -78,7 +78,7 @@
                 <a href="index.html" class="nav-item nav-link">หน้าหลัก</a>
                
                 <a href="home.html" class="nav-item nav-link">ผลตรวจสุขภาพออนไลน์</a>
-                
+                 <a href="price.html" class="nav-item nav-link">อัตราค่าบริการ</a>
                 <a href="package.html" class="nav-item nav-link">ข้อเสนอพิเศษ</a>
                 <a href="blog.html" class="nav-item nav-link active">ประกาศ/บทความ</a>
                 <a href="contact.html" class="nav-item nav-link">ติดต่อเรา</a>
