--- a/index.html
+++ b/index.html
@@ -167,7 +167,51 @@
         </div>
     </div>
     <!-- Feature End --><div class="container-xxl py-5">
+    <div class= "container-fluid">
+        <h style="font-family: sarabun; color: darkgreen;"> แพคเกจสำหรับคุณ</h>
+       <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner" id="carouselContent">
+    <!-- JS จะใส่ slide เข้ามาที่นี่ -->
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+</div>
+<script>
+  async function loadCarouselData() {
+    try {
+      const response = await fetch('https://script.google.com/macros/s/AKfycbxz5yzb_XHLC4wE85se0yT_RhunZogxfEWVsYFHExq2gpuCFShtECwMH_S_3hE8YBSMog/exec'); // << ใส่ URL App Script ของคุณ
+      const data = await response.json();
+
+      const carouselInner = document.getElementById('carouselContent');
+      carouselInner.innerHTML = ''; // ล้างของเก่า
+
+      data.forEach((item, index) => {
+        const isActive = index === 0 ? 'active' : '';
+        const carouselItem = document.createElement('div');
+        carouselItem.className = `carousel-item ${isActive}`;
+        carouselItem.innerHTML = `
+          <img src="${item.mainImage}" class="d-block w-100" alt="${item.description}">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>${item.description}</h5>
+          </div>
+        `;
+        carouselInner.appendChild(carouselItem);
+      });
+    } catch (error) {
+      console.error('Failed to load carousel data:', error);
+    }
+  }
+
+  // เรียกโหลดเมื่อหน้าเว็บพร้อม
+  window.onload = loadCarouselData;
+</script>
+ 
        
+    </div>   
 
     <!-- Footer Start -->
     <div class="container-fluid bg-secondary text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
