--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </div>
     <!-- Feature End --><div class="container-xxl py-5">
     <div class= "container-fluid">
-        <h style="font-family: sarabun; color: darkgreen;"> แพคเกจสำหรับคุณ</h>
+         <p class="d-inline-block border rounded-pill py-1 px-4">แพคเกจตรวจสุขภาพ</p>
        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner" id="carouselContent">
     <!-- JS จะใส่ slide เข้ามาที่นี่ -->
