--- a/index.html
+++ b/index.html
@@ -167,48 +167,79 @@
         </div>
     </div>
     <!-- Feature End --><div class="container-xxl py-5">
-    <div class= "container-fluid">
-         <p class="d-inline-block border rounded-pill py-1 px-4">แพคเกจตรวจสุขภาพ</p>
-       <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner" id="carouselContent">
-    <!-- JS จะใส่ slide เข้ามาที่นี่ -->
+  <style>
+  .carousel-item > .row {
+    display: flex;
+    justify-content: center;
+  }
+  .carousel-card {
+    min-width: 250px;
+    max-width: 300px;
+    margin: 0 10px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    overflow: hidden;
+    text-align: center;
+  }
+  .carousel-card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+  }
+</style>
+
+<!-- Carousel -->
+        <div class= "container-fluid">
+<div id="multiCardCarousel" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner" id="carouselMultiCardContent">
+    <!-- JS จะเติม slide เข้ามาที่นี่ -->
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+  <button class="carousel-control-prev" type="button" data-bs-target="#multiCardCarousel" data-bs-slide="prev">
     <span class="carousel-control-prev-icon"></span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+  <button class="carousel-control-next" type="button" data-bs-target="#multiCardCarousel" data-bs-slide="next">
     <span class="carousel-control-next-icon"></span>
   </button>
 </div>
+</div>
 <script>
-  async function loadCarouselData() {
-    try {
-      const response = await fetch('https://script.google.com/macros/s/AKfycbxz5yzb_XHLC4wE85se0yT_RhunZogxfEWVsYFHExq2gpuCFShtECwMH_S_3hE8YBSMog/exec'); // << ใส่ URL App Script ของคุณ
-      const data = await response.json();
+  async function loadMultiCardCarousel() {
+    const response = await fetch("https://script.google.com/macros/s/XXXXXXXXXXX/exec"); // ใส่ URL App Script ของคุณ
+    const data = await response.json();
 
-      const carouselInner = document.getElementById('carouselContent');
-      carouselInner.innerHTML = ''; // ล้างของเก่า
+    const cardsPerSlide = 3;
+    const carouselInner = document.getElementById('carouselMultiCardContent');
+    carouselInner.innerHTML = '';
 
-      data.forEach((item, index) => {
-        const isActive = index === 0 ? 'active' : '';
-        const carouselItem = document.createElement('div');
-        carouselItem.className = `carousel-item ${isActive}`;
-        carouselItem.innerHTML = `
-          <img src="${item.mainImage}" class="d-block w-100" alt="${item.description}">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>${item.description}</h5>
+    for (let i = 0; i < data.length; i += cardsPerSlide) {
+      const chunk = data.slice(i, i + cardsPerSlide);
+      const isActive = i === 0 ? 'active' : '';
+      const carouselItem = document.createElement('div');
+      carouselItem.className = `carousel-item ${isActive}`;
+
+      const row = document.createElement('div');
+      row.className = 'row justify-content-center';
+
+      chunk.forEach(item => {
+        const col = document.createElement('div');
+        col.className = 'carousel-card';
+        col.innerHTML = `
+          <img src="${item.mainImage}" alt="${item.description}">
+          <div class="p-2">
+            <h6>${item.description}</h6>
           </div>
         `;
-        carouselInner.appendChild(carouselItem);
+        row.appendChild(col);
       });
-    } catch (error) {
-      console.error('Failed to load carousel data:', error);
+
+      carouselItem.appendChild(row);
+      carouselInner.appendChild(carouselItem);
     }
   }
 
-  // เรียกโหลดเมื่อหน้าเว็บพร้อม
-  window.onload = loadCarouselData;
+  window.onload = loadMultiCardCarousel;
 </script>
+
  
        
     </div>   
