--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
 <!-- Carousel -->
  <div class= "container-fluid">
-     
+     <p class="d-inline-block border rounded-pill py-1 px-4" style="justyfy content: center;">อัตราค่าบริการ</p>
 <div id="multiCardCarousel" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner" id="carouselMultiCardContent">
     <!-- JS จะเติม slide เข้ามาที่นี่ -->
