--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <!-- Page Header End -->
 
 
-    <!-- Feature Start -->
+    <div class="container-fluid">
     <div class="container-fluid overflow-hidden bg-secondary px-lg-0" style="margin: 6rem 0;" style="background-color: darkgreen;">
         <div class="container feature px-lg-0">
             <div class="row g-0 mx-lg-0">
@@ -165,6 +165,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
     <!-- Feature End --><div class="container-xxl py-5">
   <style>
