--- a/index.html
+++ b/index.html
@@ -187,6 +187,19 @@
     height: 200px;
     object-fit: cover;
   }
+      @media (max-width: 768px) {
+  .carousel-item .row {
+    flex-direction: column;
+    align-items: center;
+  }
+  .carousel-card {
+    margin: 0 auto 15px auto;
+    width: 90% !important;
+  }
+ .text-white {
+     font-size: 0.75rem;
+ }
+}
 </style>
 
 <!-- Carousel -->
