--- a/index.html
+++ b/index.html
@@ -213,41 +213,38 @@
 
     </div>  
 <script>
-  async function loadMultiCardCarousel() {
-    const response = await fetch("https://script.google.com/macros/s/AKfycbxz5yzb_XHLC4wE85se0yT_RhunZogxfEWVsYFHExq2gpuCFShtECwMH_S_3hE8YBSMog/exec"); // ใส่ URL App Script ของคุณ
-    const data = await response.json();
+const scriptUrl = 'https://script.google.com/macros/s/xxx/exec'; // แก้ไข URL App Script
 
-    const cardsPerSlide = 3;
-    const carouselInner = document.getElementById('carouselMultiCardContent');
-    carouselInner.innerHTML = '';
+fetch(scriptUrl)
+  .then(response => response.json())
+  .then(data => {
+    const container = document.getElementById('carouselContainer');
+    let cardsPerSlide = window.innerWidth < 768 ? 1 : 3;
+    let slideIndex = 0;
+    let slide;
 
-    for (let i = 0; i < data.length; i += cardsPerSlide) {
-      const chunk = data.slice(i, i + cardsPerSlide);
-      const isActive = i === 0 ? 'active' : '';
-      const carouselItem = document.createElement('div');
-      carouselItem.className = `carousel-item ${isActive}`;
+    data.forEach((item, index) => {
+      if (index % cardsPerSlide === 0) {
+        slide = document.createElement('div');
+        slide.className = `carousel-item ${index === 0 ? 'active' : ''}`;
+        slide.innerHTML = '<div class="row"></div>';
+        container.appendChild(slide);
+      }
 
-      const row = document.createElement('div');
-      row.className = 'row justify-content-center';
-
-      chunk.forEach(item => {
-        const col = document.createElement('div');
-        col.className = 'carousel-card';
-        col.innerHTML = `
-          <img src="${item.mainImage}" alt="${item.description}">
-          <div class="p-2">
-            <h6>${item.description}</h6>
+      const cardHTML = `
+        <div class="carousel-card">
+          <div class="card">
+            <img src="${item.mainImage}" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+              <h5 class="card-title">${item.description}</h5>
+            </div>
           </div>
-        `;
-        row.appendChild(col);
-      });
+        </div>
+      `;
 
-      carouselItem.appendChild(row);
-      carouselInner.appendChild(carouselItem);
-    }
-  }
-
-  window.onload = loadMultiCardCarousel;
+      slide.querySelector('.row').innerHTML += cardHTML;
+    });
+  });
 </script>
 
  
