--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
     </div>  
 <script>
-const scriptUrl = 'https://script.google.com/macros/s/xxx/exec'; // แก้ไข URL App Script
+const scriptUrl = 'https://script.google.com/macros/s/AKfycbxz5yzb_XHLC4wE85se0yT_RhunZogxfEWVsYFHExq2gpuCFShtECwMH_S_3hE8YBSMog/exec'; // แก้ไข URL App Script
 
 fetch(scriptUrl)
   .then(response => response.json())
@@ -245,6 +245,7 @@ fetch(scriptUrl)
       slide.querySelector('.row').innerHTML += cardHTML;
     });
   });
+     
 </script>
 
  
