--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </div>
     </div>
     <!-- Feature End --><div class="container-xxl py-5">
- <style>
+<style>
 .carousel-item > .row {
   display: flex;
   justify-content: center;
@@ -181,27 +181,21 @@
 
 @media (min-width: 768px) {
   .carousel-card {
-    flex: 0 0 33.333%; /* 3 cards */
-    max-width: 33.333%;
-  }
-  .text-white{
-      font-size: 0.80rem;
+    flex: 0 0 33.3333%;
+    max-width: 33.3333%;
   }
 }
 
 @media (max-width: 767.98px) {
   .carousel-card {
-    flex: 0 0 100%; /* 1 card */
+    flex: 0 0 100%;
     max-width: 100%;
   }
 }
 </style>
-
-<!-- Carousel -->
- <div class= "container-fluid">
-     <div id="customCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div id="customCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000" data-bs-pause="hover">
   <div class="carousel-inner" id="carouselContainer">
-    <!-- Slides will be injected here by JS -->
+    <!-- JS จะเพิ่ม slide ตรงนี้ -->
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#customCarousel" data-bs-slide="prev">
     <span class="carousel-control-prev-icon"></span>
@@ -211,41 +205,50 @@
   </button>
 </div>
 
-    </div>  
 <script>
-const scriptUrl = 'https://script.google.com/macros/s/AKfycbxz5yzb_XHLC4wE85se0yT_RhunZogxfEWVsYFHExq2gpuCFShtECwMH_S_3hE8YBSMog/exec'; // แก้ไข URL App Script
+const scriptUrl = 'https://script.google.com/macros/s/xxx/exec'; // 👉 ใส่ URL ของคุณ
 
-fetch(scriptUrl)
-  .then(response => response.json())
-  .then(data => {
-    const container = document.getElementById('carouselContainer');
-    let cardsPerSlide = window.innerWidth < 768 ? 1 : 3;
-    let slideIndex = 0;
-    let slide;
+function buildCarousel(cardsPerSlide) {
+  fetch(scriptUrl)
+    .then(res => res.json())
+    .then(data => {
+      const container = document.getElementById('carouselContainer');
+      container.innerHTML = ''; // เคลียร์ก่อนสร้างใหม่
 
-    data.forEach((item, index) => {
-      if (index % cardsPerSlide === 0) {
-        slide = document.createElement('div');
-        slide.className = `carousel-item ${index === 0 ? 'active' : ''}`;
-        slide.innerHTML = '<div class="row"></div>';
-        container.appendChild(slide);
-      }
+      let slide, row;
+      data.forEach((item, index) => {
+        if (index % cardsPerSlide === 0) {
+          slide = document.createElement('div');
+          slide.className = `carousel-item ${index === 0 ? 'active' : ''}`;
+          row = document.createElement('div');
+          row.className = 'row';
+          slide.appendChild(row);
+          container.appendChild(slide);
+        }
 
-      const cardHTML = `
-        <div class="carousel-card">
-          <div class="card">
-            <img src="${item.mainImage}" class="card-img-top" alt="...">
-            <div class="card-body text-center">
-              <h5 class="card-title">${item.description}</h5>
+        const card = `
+          <div class="carousel-card">
+            <div class="card">
+              <img src="${item.mainImage}" class="card-img-top" alt="...">
+              <div class="card-body text-center">
+                <h5 class="card-title">${item.description}</h5>
+              </div>
             </div>
           </div>
-        </div>
-      `;
-
-      slide.querySelector('.row').innerHTML += cardHTML;
+        `;
+        row.innerHTML += card;
+      });
     });
-  });
-     
+}
+
+// เรียกเมื่อโหลด + เวลา resize
+function updateCarouselLayout() {
+  const isMobile = window.innerWidth < 768;
+  buildCarousel(isMobile ? 1 : 3);
+}
+
+window.addEventListener('load', updateCarouselLayout);
+window.addEventListener('resize', updateCarouselLayout);
 </script>
 
  
