--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 </div>
 
 <script>
-const scriptUrl = 'https://script.google.com/macros/s/xxx/exec'; // 👉 ใส่ URL ของคุณ
+const scriptUrl = 'https://script.google.com/macros/s/AKfycbxz5yzb_XHLC4wE85se0yT_RhunZogxfEWVsYFHExq2gpuCFShtECwMH_S_3hE8YBSMog/exec'; // 👉 ใส่ URL ของคุณ
 
 function buildCarousel(cardsPerSlide) {
   fetch(scriptUrl)
