--- a/index.html
+++ b/index.html
@@ -193,6 +193,10 @@
   }
 }
 </style>
+        <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+  <p class="d-inline-block border rounded-pill py-1 px-4">แพคเกจตรวจสุขภาพ</p>
+</div>
+
         <div id="customCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000" data-bs-pause="hover">
   <div class="carousel-inner" id="carouselContainer">
     <!-- JS จะเพิ่ม slide ตรงนี้ -->
