--- a/index.html
+++ b/index.html
@@ -193,8 +193,9 @@
   }
 }
 </style>
+        <div class="container-fluid">
         <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
-  <p class="d-inline-block border rounded-pill py-1 px-4">แพคเกจตรวจสุขภาพ</p>
+  <p class="d-inline-block border rounded-pill py-1 px-4" style="color: darkgreen;">แพคเกจตรวจสุขภาพ</p>
 </div>
 
         <div id="customCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000" data-bs-pause="hover">
@@ -208,7 +209,7 @@
     <span class="carousel-control-next-icon"></span>
   </button>
 </div>
-
+        </div>
 <script>
 const scriptUrl = 'https://script.google.com/macros/s/AKfycbxz5yzb_XHLC4wE85se0yT_RhunZogxfEWVsYFHExq2gpuCFShtECwMH_S_3hE8YBSMog/exec'; // 👉 ใส่ URL ของคุณ
 
