--- a/index.html
+++ b/index.html
@@ -194,9 +194,7 @@
 }
 </style>
         <div class="container-fluid">
-        <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
-  <p class="d-inline-block border rounded-pill py-1 px-4" style="color: darkgreen;">แพคเกจตรวจสุขภาพ</p>
-</div>
+    <p class="d-inline-block border rounded-pill text-center py-1 px-4" style="color: darkgreen;">อัตราค่าบริการ</p>
 
         <div id="customCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000" data-bs-pause="hover">
   <div class="carousel-inner" id="carouselContainer">
