--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 }
 </style>
         <div class="container-fluid">
-    <p class="d-inline-block border rounded-pill text-center py-1 px-4" style="color: darkgreen;">อัตราค่าบริการ</p>
+    <p class="d-inline-block border rounded-pill text-center py-1 px-4 mb-3 fw-bold" href="package.html" style="color: darkgreen; cursor: pointer;">แพคเกจตรวจสุขภาพ</p>
 
         <div id="customCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000" data-bs-pause="hover">
   <div class="carousel-inner" id="carouselContainer">
