--- a/package.html
+++ b/package.html
@@ -51,6 +51,15 @@
         .navbar-toggler-icon {
             background-image: url('data:image/svg+xml;charset=UTF8,%3Csvg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="black"%3E%3Cpath stroke="rgba%280, 0, 0, 0.7%29" stroke-width="3" stroke-linecap="round" stroke-miterlimit="10" d="M4 7h22M4 15h22M4 23h22"/%3E%3C/svg%3E');
         }
+
+     .b-example-divider {
+        width: 100%;
+        height: 3rem;
+        background-color: rgba(0, 0, 0, .1);
+        border: solid rgba(0, 0, 0, .15);
+        border-width: 1px 0;
+        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+      }
 </style>
 <body>
     <!-- Spinner Start -->
@@ -91,12 +100,13 @@
 
 
 
+ <div class="b-example-divider"></div>
 
     <!-- Team Start -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <p class="d-inline-block border rounded-pill py-1 px-4">อัตราค่าบริการ</p>
+               
                 <h1 style="font-family: sarabun; color:darkcyan;">แพคเกจสุดพิเศษสำหรับคุณ</h1>
             </div>
             <div class="row g-4" id="package">
@@ -120,6 +130,7 @@
         </div>
     </div>
 
+ <div class="b-example-divider"></div>
     <!-- Footer Start -->
     <div class="container-fluid bg-secondary text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
        
