--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 }
 </style>
         <div class="container-fluid">
-    <a href="package.html" class="nav-item nav-link border border-success rounded-pill text-center py-1 px-4 mb-3 fw-bold" style="color: darkgreen; cursor: pointer; border-color: darkgreen;">แพคเกจตรวจสุขภาพ</a>
+    <a href="package.html" class="nav-item nav-link border border-success rounded-pill text-center py-1 px-4 mb-3 fw-bold" style="color: darkgreen; cursor: pointer; border-color: darkgreen; margin-left: 100px; margin-right: 100px;">แพคเกจตรวจสุขภาพ</a>
         <div id="customCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000" data-bs-pause="hover">
   <div class="carousel-inner" id="carouselContainer">
     <!-- JS จะเพิ่ม slide ตรงนี้ -->
