--- a/blog.html
+++ b/blog.html
@@ -98,6 +98,15 @@
     body{
         background-image: linear-gradient(to top, #156f20, #358532, #4f9b45, #69b158, #82c86b, #93d47e, #a4e091, #b5eca4, #c3efba, #d2f2ce, #e3f4e2, #f4f6f4);
     }
+
+     .b-example-divider {
+        width: 100%;
+        height: 3rem;
+        background-color: rgba(0, 0, 0, .1);
+        border: solid rgba(0, 0, 0, .15);
+        border-width: 1px 0;
+        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+      }
   .container-blog{
     width: 80%;
     min-height: 400px;
@@ -144,7 +153,7 @@
 
 
 </style>
-
+ <div class="b-example-divider"></div>
     <!-- Testimonial Start -->
     <div class="container-blog" id="blog">
 
@@ -168,7 +177,7 @@
         </div>
     </div>
  
-
+ <div class="b-example-divider"></div>
     <!-- Footer Start -->
     <div class="container-fluid bg-secondary text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
        
