--- a/index.html
+++ b/index.html
@@ -255,7 +255,9 @@ window.addEventListener('load', updateCarouselLayout);
 window.addEventListener('resize', updateCarouselLayout);
 </script>
 
- 
+ <div class= "container-fluid">
+     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfhs1HejyNNqc1APXDNowxmZ8ix-QpSAn68tUjv4jtPsCWGvQ/viewform?embedded=true" width="640" height="1150" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+ </div>
        
    
 
