--- a/index.html
+++ b/index.html
@@ -178,7 +178,15 @@
   padding: 10px;
   width: 100%;
 }
-
+.container-sm{
+    display: flex;
+}
+    .container-title{
+        width: 40%;
+    }
+    .container-frame{
+        width: 60%;
+    }
 @media (min-width: 768px) {
   .carousel-card {
     flex: 0 0 33.3333%;
@@ -255,8 +263,13 @@ window.addEventListener('load', updateCarouselLayout);
 window.addEventListener('resize', updateCarouselLayout);
 </script>
 
- <div class= "container-fluid">
+ <div class= "container-sm" id="mailbox">
+     <div class="container-title">
+         <h>บริการนัดหมายล่วงหน้า</h>
+     </div>
+     <div class="container-frame">
      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfhs1HejyNNqc1APXDNowxmZ8ix-QpSAn68tUjv4jtPsCWGvQ/viewform?embedded=true" width="640" height="1150" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+     </div>
  </div>
        
    
