--- a/index.html
+++ b/index.html
@@ -199,6 +199,9 @@
     flex: 0 0 100%;
     max-width: 100%;
   }
+    .container-sm{
+        display: none;
+    }
 }
 </style>
   <div class="container-fluid">
@@ -263,7 +266,7 @@ window.addEventListener('load', updateCarouselLayout);
 window.addEventListener('resize', updateCarouselLayout);
 </script>
 
- <div class= "container-sm" id="mailbox">
+ <div class= "container-sm mt-5" id="mailbox">
      <div class="container-title">
         <img src="https://img2.pic.in.th/pic/Rb-Medical-laboratory-1.png">
      </div>
