--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         width: 40%;
     }
     .container-frame{
-        width: 60%;
+        width: 50%;
     }
 @media (min-width: 768px) {
   .carousel-card {
@@ -267,10 +267,10 @@ window.addEventListener('resize', updateCarouselLayout);
 </script>
 
  <div class= "container-sm mt-5" id="mailbox">
-     <div class="container-title">
+     <div class="container-title ms-2">
         <img src="https://img2.pic.in.th/pic/Rb-Medical-laboratory-1.png">
      </div>
-     <div class="container-frame mt-2 ms-2">
+     <div class="container-frame mt-2 ms-5">
      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfhs1HejyNNqc1APXDNowxmZ8ix-QpSAn68tUjv4jtPsCWGvQ/viewform?embedded=true" width="640" height="1150" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
      </div>
  </div>
