--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
     </div>
     <!-- Page Header End -->
-
+<div class="b-example-divider"></div>
 
     <div class="container-fluid">
     <div class="container-fluid overflow-hidden bg-secondary px-lg-0" style="margin: 6rem 0;" style="background-color: darkgreen;">
@@ -168,6 +168,7 @@
     </div>
     </div>
     <!-- Feature End --><div class="container-xxl py-5">
+        <div class="b-example-divider"></div>
 <style>
 .carousel-item > .row {
   display: flex;
@@ -195,6 +196,14 @@
     .container-frame{
         width: 50%;
     }
+     .b-example-divider {
+        width: 100%;
+        height: 3rem;
+        background-color: rgba(0, 0, 0, .1);
+        border: solid rgba(0, 0, 0, .15);
+        border-width: 1px 0;
+        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+      }
 @media (min-width: 768px) {
   .carousel-card {
     flex: 0 0 33.3333%;
@@ -214,7 +223,7 @@
         display: flex;
     }
 }
-</style>
+</style><div class="b-example-divider"></div>
   <div class="container-fluid">
       <div class="container-sm">
     <a href="package.html" class="nav-item nav-link border border-success rounded-pill text-center py-1 px-4 mb-3 fw-bold" style="color: darkgreen; cursor: pointer; border-color: darkgreen;">แพคเกจตรวจสุขภาพ</a>
