--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </div>
     </div>
     <!-- Feature End --><div class="container-xxl py-5">
-        <div class="b-example-divider"></div>
+        
 <style>
 .carousel-item > .row {
   display: flex;
@@ -223,7 +223,8 @@
         display: flex;
     }
 }
-</style><div class="b-example-divider"></div>
+</style>
+        <div class="b-example-divider"></div>
   <div class="container-fluid">
       <div class="container-sm">
     <a href="package.html" class="nav-item nav-link border border-success rounded-pill text-center py-1 px-4 mb-3 fw-bold" style="color: darkgreen; cursor: pointer; border-color: darkgreen;">แพคเกจตรวจสุขภาพ</a>
@@ -285,7 +286,7 @@ function updateCarouselLayout() {
 window.addEventListener('load', updateCarouselLayout);
 window.addEventListener('resize', updateCarouselLayout);
 </script>
-
+<div class="b-example-divider"></div>
  <div class= "container-sm mt-5" id="mailbox">
      <div class="container-title ms-2">
         <img src="https://img2.pic.in.th/pic/Rb-Medical-laboratory-1.png">
