--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <div class="b-example-divider"></div>
   <div class="container-fluid">
       <div class="container-sm">
-    <a href="package.html" class="nav-item nav-link border border-success rounded-pill text-center py-1 px-4 mb-3 fw-bold" style="color: darkgreen; cursor: pointer; border-color: darkgreen;">แพคเกจตรวจสุขภาพ</a>
+    <a href="package.html" class="nav-item nav-link border border-success rounded-pill text-center py-1 px-4 mb-3 fw-bold mt-3" style="color: darkgreen; cursor: pointer; border-color: darkgreen;">แพคเกจตรวจสุขภาพ</a>
       </div>
         <div id="customCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000" data-bs-pause="hover">
   <div class="carousel-inner" id="carouselContainer">
