--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
 .bg-primary {
     background-color: darkgreen;
 }
+         .textchoice {
+             font-size: 1.25rem;
+             font-family: "sarabun";
+             color: white;
+         }
 </style>
 <body>
     <!-- Spinner Start -->
@@ -167,7 +172,7 @@
                 </div>
                 <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
                    <div class="position-relative h-100">
-                        <img class="position-absolute img-thumbnail w-100 h-100" src="https://img5.pic.in.th/file/secure-sv1/-1ee04bf21b67b3bf8.png" style="object-fit: cover;" alt="">
+                        <img class="position-absolute img-thumbnail w-100 h-100 mb-2" src="https://img5.pic.in.th/file/secure-sv1/-1ee04bf21b67b3bf8.png" style="object-fit: cover;" alt="">
                     </div>
                 </div>
             </div>
@@ -228,6 +233,9 @@
     }
     .container-mobile {
         display: flex;
+    }
+    .textchoice {
+        font-size: 075rem;
     }
 }
 </style>
