--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
-                   <div class="position-relative h-100">
+                   <div class="position-relative h-100 pb-2 mb-2">
                         <img class="position-absolute img-thumbnail w-100 h-100 mb-2" src="https://img5.pic.in.th/file/secure-sv1/-1ee04bf21b67b3bf8.png" style="object-fit: cover;" alt="">
                     </div>
                 </div>
