--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
              .text-white{
                  font-size: 0.75rem;
              }
+             .position-reactive{
+                 display: none;
+             }
 }
           
         
@@ -171,7 +174,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
-                   <div class="position-relative h-100 pb-2 mb-2">
+                   <div class="position-relative h-100">
                         <img class="position-absolute img-thumbnail w-100 h-100 mb-2" src="https://img5.pic.in.th/file/secure-sv1/-1ee04bf21b67b3bf8.png" style="object-fit: cover;" alt="">
                     </div>
                 </div>
