--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
              .position-reactive{
                  display: none;
              }
+             .d-flex {
+                 widht: 20px;
+                 height: 20px;
+             }
 }
           
         
