--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       }
 
     .hero-header {
-    background: url(../img/hero.jpg) top right no-repeat;
+    background: url(https://img5.pic.in.th/file/secure-sv1/5223.jpg) top right no-repeat;
     background-size: cover;
 }
      .page-headers {
