--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
         <div class="container py-5">
             <div class="row justify-content-start">
                 <div class="col-lg-8 text-center text-lg-start">
-                    <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5" style="border-color: rgba(256, 256, 256, .3) !important;">Welcome To Medinova</h5>
-                    <h1 class="display-1 text-white mb-md-4">R&B Medical Laboratory</h1>
+                    
+                    <h1 class="display-1 text-white mb-md-4" style="color: darkgreen;/">R&B Medical Laboratory</h1>
                    
                 </div>
             </div>
@@ -143,32 +143,32 @@
                 <div class="col-lg-7">
                     <div class="mb-4">
                         <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">About Us</h5>
-                        <h1 class="display-4">Best Medical Care For Yourself and Your Family</h1>
+                        <h1 class="display-4"></h1>
                     </div>
-                    <p>Tempor erat elitr at rebum at at clita aliquyam consetetur. Diam dolor diam ipsum et, tempor voluptua sit consetetur sit. Aliquyam diam amet diam et eos sadipscing labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit. Sanctus clita duo justo et tempor consetetur takimata eirmod, dolores takimata consetetur invidunt magna dolores aliquyam dolores dolore. Amet erat amet et magna</p>
+                    <p>ศูนย์ตรวจและวิเคราะห์ทางการแพทย์ ที่มีห้องปฎิบัติทางการแพทย์ที่ทันสมัย ระบบออกผลที่เที่ยงตรง พร้อมบุคลากรผู้เชียวชาญ ในวิชาชีพ    นอกจากนั้น R&B Medical ยังมีบริการด้านสุขภาพอื่นๆไว้คอยช่วยเหลือคุณ ดังนี้ </p>
                     <div class="row g-3 pt-3">
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-3x fa-user-md text-primary mb-3"></i>
-                                <h6 class="mb-0">Qualified<small class="d-block text-primary">Doctors</small></h6>
+                                <h6 class="mb-0">บริการ<small class="d-block text-primary">ตรวจสุขภาพเคลื่อนที่</small></h6>
                             </div>
                         </div>
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-3x fa-procedures text-primary mb-3"></i>
-                                <h6 class="mb-0">Emergency<small class="d-block text-primary">Services</small></h6>
+                                <h6 class="mb-0">ติดต่อและจัดหา<small class="d-block text-primary">บุคลากรวิชาชีพ</small></h6>
                             </div>
                         </div>
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-3x fa-microscope text-primary mb-3"></i>
-                                <h6 class="mb-0">Accurate<small class="d-block text-primary">Testing</small></h6>
+                                <h6 class="mb-0">บริการให้เช่า<small class="d-block text-primary">เครื่องมือตรวจด้านชีวอนามัย</small></h6>
                             </div>
                         </div>
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-3x fa-ambulance text-primary mb-3"></i>
-                                <h6 class="mb-0">Free<small class="d-block text-primary">Ambulance</small></h6>
+                                <h6 class="mb-0">บริการให้เช่า<small class="d-block text-primary">รถเอ็กซเรย์ ระบบดิจิตอล</small></h6>
                             </div>
                         </div>
                     </div>
