--- a/index.html
+++ b/index.html
@@ -150,25 +150,25 @@
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-3x fa-user-md text-primary mb-3"></i>
-                                <h6 class="mb-0">บริการ<small class="d-block text-primary">ตรวจสุขภาพเคลื่อนที่</small></h6>
+                                <h6 class="mb-0">บริการ<small class="d-block" style="color: darkgreen; font-size: 0.75rem;">ตรวจสุขภาพเคลื่อนที่</small></h6>
                             </div>
                         </div>
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-3x fa-procedures text-primary mb-3"></i>
-                                <h6 class="mb-0">ติดต่อและจัดหา<small class="d-block text-primary">บุคลากรวิชาชีพ</small></h6>
+                                <h6 class="mb-0">ติดต่อและจัดหา<small  class="d-block" style="color: darkgreen; font-size: 0.75rem;">บุคลากรวิชาชีพ</small></h6>
                             </div>
                         </div>
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-3x fa-microscope text-primary mb-3"></i>
-                                <h6 class="mb-0">บริการให้เช่า<small class="d-block text-primary">เครื่องมือตรวจด้านชีวอนามัย</small></h6>
+                                <h6 class="mb-0">บริการให้เช่า<small  class="d-block" style="color: darkgreen; font-size: 0.75rem;">เครื่องมือตรวจด้านชีวอนามัย</small></h6>
                             </div>
                         </div>
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-3x fa-ambulance text-primary mb-3"></i>
-                                <h6 class="mb-0">บริการให้เช่า<small class="d-block text-primary">รถเอ็กซเรย์ ระบบดิจิตอล</small></h6>
+                                <h6 class="mb-0">บริการให้เช่า<small  class="d-block" style="color: darkgreen; font-size: 0.75rem;">รถเอ็กซเรย์ ระบบดิจิตอล</small></h6>
                             </div>
                         </div>
                     </div>
