--- a/index.html
+++ b/index.html
@@ -149,26 +149,26 @@
                     <div class="row g-3 pt-3">
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
-                                <i class="fa fa-3x fa-user-md text-primary mb-3"></i>
-                                <h6 class="mb-0">บริการ<small class="d-block" style="color: darkgreen; font-size: 0.75rem;">ตรวจสุขภาพเคลื่อนที่</small></h6>
+                                <i class="fa fa-3x fa-university-md text-success mb-3"></i>
+                                <h6 class="mb-0" style="color: gray; font-size: 0.75rem;">บริการ<small class="d-block" style="color: darkgreen; font-size: 0.60rem;">ตรวจสุขภาพเคลื่อนที่</small></h6>
                             </div>
                         </div>
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-3x fa-procedures text-primary mb-3"></i>
-                                <h6 class="mb-0">ติดต่อและจัดหา<small  class="d-block" style="color: darkgreen; font-size: 0.75rem;">บุคลากรวิชาชีพ</small></h6>
+                                <h6 class="mb-0" style="color: gray; font-size: 0.75rem;">ติดต่อและจัดหา<small  class="d-block" style="color: darkgreen; font-size: 0.60rem;">บุคลากรวิชาชีพ</small></h6>
                             </div>
                         </div>
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-3x fa-microscope text-primary mb-3"></i>
-                                <h6 class="mb-0">บริการให้เช่า<small  class="d-block" style="color: darkgreen; font-size: 0.75rem;">เครื่องมือตรวจด้านชีวอนามัย</small></h6>
+                                <h6 class="mb-0"  style="color: gray; font-size: 0.75rem;">บริการให้เช่า<small  class="d-block" style="color: darkgreen; font-size: 0.60rem;">เครื่องมือตรวจด้านชีวอนามัย</small></h6>
                             </div>
                         </div>
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-3x fa-ambulance text-primary mb-3"></i>
-                                <h6 class="mb-0">บริการให้เช่า<small  class="d-block" style="color: darkgreen; font-size: 0.75rem;">รถเอ็กซเรย์ ระบบดิจิตอล</small></h6>
+                                <h6 class="mb-0"  style="color: gray; font-size: 0.75rem;">บริการให้เช่า<small  class="d-block" style="color: darkgreen; font-size: 0.60rem;">รถเอ็กซเรย์ ระบบดิจิตอล</small></h6>
                             </div>
                         </div>
                     </div>
