--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <div class="row g-3 pt-3">
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
-                                <i class="fa fa-3x fa-university-md text-success mb-3"></i>
+                                <i class="fa fa-university" aria-hidden="true"></i>
                                 <h6 class="mb-0" style="color: gray; font-size: 0.75rem;">บริการ<small class="d-block" style="color: darkgreen; font-size: 0.60rem;">ตรวจสุขภาพเคลื่อนที่</small></h6>
                             </div>
                         </div>
