--- a/index.html
+++ b/index.html
@@ -148,28 +148,36 @@
                     <p>ศูนย์ตรวจและวิเคราะห์ทางการแพทย์ ที่มีห้องปฎิบัติทางการแพทย์ที่ทันสมัย ระบบออกผลที่เที่ยงตรง พร้อมบุคลากรผู้เชียวชาญ ในวิชาชีพ    นอกจากนั้น R&B Medical ยังมีบริการด้านสุขภาพอื่นๆไว้คอยช่วยเหลือคุณ ดังนี้ </p>
                     <div class="row g-3 pt-3">
                         <div class="col-sm-3 col-6">
+                            <a href="checkup.html">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-university fa-4x mb-3" aria-hidden="true"></i>
                                 <h6 class="mb-0" style="color: gray; font-size: 0.75rem;">บริการ<small class="d-block" style="color: darkgreen; font-size: 0.60rem;">ตรวจสุขภาพเคลื่อนที่</small></h6>
                             </div>
+                            </a>
                         </div>
                         <div class="col-sm-3 col-6">
+                            <a href="outsort.html">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-user fa-4x mb-3" aria-hidden="true"></i>
                                 <h6 class="mb-0" style="color: gray; font-size: 0.75rem;">ติดต่อและจัดหา<small  class="d-block" style="color: darkgreen; font-size: 0.60rem;">บุคลากรวิชาชีพ</small></h6>
                             </div>
+                            </a>
                         </div>
                         <div class="col-sm-3 col-6">
+                            <a href="method.html">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-4x fa-microscope text-secondary mb-3"></i>
                                 <h6 class="mb-0"  style="color: gray; font-size: 0.75rem;">บริการให้เช่า<small  class="d-block" style="color: darkgreen; font-size: 0.60rem;">เครื่องมือตรวจด้านชีวอนามัย</small></h6>
                             </div>
+                            </a>
                         </div>
                         <div class="col-sm-3 col-6">
+                            <a href="xray.html">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-truck fa-4x mb-3" aria-hidden="true"></i>
                                 <h6 class="mb-0"  style="color: gray; font-size: 0.75rem;">บริการให้เช่า<small  class="d-block" style="color: darkgreen; font-size: 0.60rem;">รถเอ็กซเรย์ ระบบดิจิตอล</small></h6>
                             </div>
+                            </a>
                         </div>
                     </div>
                 </div>
