--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </div>
                 <div class="col-lg-7">
                     <div class="mb-4">
-                        <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">About Us</h5>
+                        <h5 class="d-inline-block text-uppercase border-bottom border-5" style="color: darkgreen;">About Us</h5>
                         <h1 class="display-4"></h1>
                     </div>
                     <p>ศูนย์ตรวจและวิเคราะห์ทางการแพทย์ ที่มีห้องปฎิบัติทางการแพทย์ที่ทันสมัย ระบบออกผลที่เที่ยงตรง พร้อมบุคลากรผู้เชียวชาญ ในวิชาชีพ    นอกจากนั้น R&B Medical ยังมีบริการด้านสุขภาพอื่นๆไว้คอยช่วยเหลือคุณ ดังนี้ </p>
@@ -172,7 +172,7 @@
                             </a>
                         </div>
                         <div class="col-sm-3 col-6">
-                            <a href="xray.html">
+                            <a href="xray_rent.html">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-truck fa-4x mb-3" aria-hidden="true"></i>
                                 <h6 class="mb-0"  style="color: gray; font-size: 0.75rem;">บริการให้เช่า<small  class="d-block" style="color: darkgreen; font-size: 0.60rem;">รถเอ็กซเรย์ ระบบดิจิตอล</small></h6>
